# AutoSort

./: CONTRIBUTING.md  LICENSE.txt  PROJECT_PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs  schema.rs
src-tauri/src/engine/: history.rs  mod.rs  mover.rs  rules.rs
src-tauri/src/watcher/: handler.rs
src/components/Dashboard/: PendingFiles.tsx  RecentActivity.tsx  Stats.tsx  index.tsx
src/components/Rules/: RuleEditor.tsx  RulesList.tsx  index.tsx
src/components/Settings/: index.tsx
src/components/common/: FileIcon.tsx  Sidebar.tsx  TitleBar.tsx
src/hooks/: useConfig.ts  useHistory.ts  useWatcher.ts
src/lib/: notifications.ts  tauri.ts  types.ts
src/styles/: globals.css
